--- a/index.html
+++ b/index.html
@@ -22,5 +22,9 @@
   </head>
   <body>
     <h1>Bienvenido a la web móvil</h1>
+    <!-- Hey Webmaster! Place this html code where you'd like the game to appear. -->
+<iframe src="https://www.silvergames.com/es/3d-solitaire/iframe" width="900" height="600" style="margin:0;padding:0;border:0"></iframe>
+<p style="text-align:center">¡Un <a href="https://www.silvergames.com/es/t/solitaire">Solitaire Juegos</a> </p>
+<!-- End of game embed code -->
   </body>
 </html>
