--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   </head>
   <body>
-    <h1>Bienvenido a la web móvil</h1>
-    <!-- Hey Webmaster! Place this html code where you'd like the game to appear. -->
-<iframe src="https://www.silvergames.com/es/3d-solitaire/iframe" width="900" height="600" style="margin:0;padding:0;border:0"></iframe>
-<p style="text-align:center">¡Un <a href="https://www.silvergames.com/es/t/solitaire">Solitaire Juegos</a> </p>
-<!-- End of game embed code -->
+    <h1>Bienbenido a la web móvil</h1>
+
   </body>
 </html>
