--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>Feliz 2018!</h1>
     <script type='text/javascript' id=475815>
     	(function(d, gn,scriptId){
-    	var prop = {'agent': 'pub-13992-14261', 'bgcolor':'#fff', 'wrapperwidth':'640px', 'wrapperheight':'640px', 'gamewidth':'100%', 'gameheight':'100%', 'game_fullscreen_on_mobile':'true', 'locale':'en'};	jsid = 'sgEmbedJS';if( d.getElementById(jsid) ) {embed(d,scriptId,gn, prop); } else {
+    	var prop = {'agent': '', 'bgcolor':'#fff', 'wrapperwidth':'640px', 'wrapperheight':'640px', 'gamewidth':'100%', 'gameheight':'100%', 'game_fullscreen_on_mobile':'true', 'locale':'en'};	jsid = 'sgEmbedJS';if( d.getElementById(jsid) ) {embed(d,scriptId,gn, prop); } else {
     	var s = d.createElement('script'); s.id = jsid; s.type = 'text/javascript'; s.onload = function(){embed(d,scriptId,gn, prop);};
     	s.src='//dop3jnx8my3ym.cloudfront.net/embedder.js'; d.getElementsByTagName('head')[0].appendChild(s);}
     	}(document,'best-classic-freecell-solitaire',475815));
